@@ -1,3 +1,13 @@
+2008-10-30  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        - https://bugs.webkit.org/show_bug.cgi?id=21986
+          <rdar://problem/6294285> adopt CFURLCopySharedURLCache
+
+        * WebView.cpp:
+        (WebView::setCacheModel): Use CFURLCopySharedURLCache if present.
+
 2008-10-30  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Sam Weinig.
